--- a/src/app/BlogsComponents/mydetails/mydetails.component.html
+++ b/src/app/BlogsComponents/mydetails/mydetails.component.html
@@ -34,7 +34,7 @@
                     <p class="card-text">
                         "Join my Discord server to connect with like-minded people, share ideas, and collaborate on projects.
                          We offer a friendly and inclusive community where everyone is welcome. 
-                         Come join us and let's grow together!"
+                         Come join us and let's grow together.!"
                     </p>
                 </div>
                 <div class="card-footer"><a class="btn btn-primary btn-sm" href="https://discord.gg/7kfU7NyT">Join On Discord</a></div>
