--- a/src/app/BlogsComponents/footer/footer.component.html
+++ b/src/app/BlogsComponents/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-5 bg-dark">
-    <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Kamil Makwana 2023</p></div>
+    <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Kamil Makwana From 2023</p></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
