Add login and feedback form with fa fa icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,10 @@
   
 </DIV> -->
 
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <app-intro></app-intro>
 <app-mydetails></app-mydetails>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+
