Add About Page and changes in login page with new form

--- a/src/app/BlogsComponents/navbar/navbar.component.html
+++ b/src/app/BlogsComponents/navbar/navbar.component.html
@@ -13,17 +13,18 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
-            <a class="navbar-brand" href="#!">My Home</a>
+            <a class="navbar-brand" href="#" routerLink="/Home" routerLinkActive="active">Kamil's Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#" routerLink="/Home" routerLinkActive="active">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#" routerLink="/About" routerLinkActive="active">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" routerLink="/feedback" routerLinkActive="active">Feedback</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" routerLink="/login" routerLinkActive="active">SignUp</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+    
 
     
