--- a/src/app/BlogsComponents/intro/intro.component.html
+++ b/src/app/BlogsComponents/intro/intro.component.html
@@ -10,7 +10,7 @@
                 and document your journey through life. Whether you're writing for yourself or for others,
                  a personal blog is a powerful way to make your mark on the world.
             </p>
-            <a class="btn btn-primary" href="#!">Explore</a>
+            <a class="btn btn-primary" href="#" routerLink="/login" routerLinkActive="active">Click To Sign Up</a>
         </div>
     </div>
     <!-- Call to Action-->
