--- a/src/app/BlogsComponents/feedback/feedback.component.html
+++ b/src/app/BlogsComponents/feedback/feedback.component.html
@@ -1,18 +1,18 @@
 <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-4">
-        <form>
+        <form id="formid">
             <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
             </div>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" required>
           </div>
           <div class="form-group">
             <label for="rating">Rating</label>
-            <div class="rating">
+            <!-- <div class="rating">
                 <input type="checkbox" id="star1" name="rating" value="1" />
                      <label for="star1" title="1 star"><i class="fa fa-star">
                          <fa-icon [icon]="faStar" size="1x"></fa-icon></i></label>
@@ -28,11 +28,18 @@
                 <input type="checkbox" id="star5" name="rating" value="5" />
                       <label for="star5" title="5 stars"><i class="fa fa-star">
                          <fa-icon [icon]="faStar" size="1x"></fa-icon></i></label>
-              </div>
+                        </div> -->
+                        <div>
+                          <ngb-rating [max]="5" [(rate)]="starRating" [readonly]="false" ></ngb-rating>
+                        </div>
           </div>
           <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <label for="exampleFormControlTextarea1">Your Valueable Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <br>
+          <div class="text-center">
+            <button class="btn btn-primary" (click)="OnClick()" type="submit">submit</button>
           </div>
         </form>
       </div>
