--- a/src/app/BlogsComponents/login/login.component.html
+++ b/src/app/BlogsComponents/login/login.component.html
@@ -1,66 +1,79 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Easiest Way to Add Input Masks to Your Forms</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
-    
-</head>
-<body>
-    <div class="registration-form">
-        <form>
-            <div class="form-icon">
-                <span><i class="icon icon-user"></i></span>
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control item" id="username" placeholder="Username" required>
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control item" id="password" placeholder="Password" required>
-            </div>
-            <div class="form-group">
-              <input type="email" class="form-control item" id="email" placeholder="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control item" id="phone-number" placeholder="Phone Number" pattern="[0-9]{10}" required>
-            </div>
-            <div class="form-group">
-              <input type="date" class="form-control item" id="birth-date" placeholder="dd-mm-yyyy" required>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-block create-account">Create Account</button>
-            </div>
-        </form>
-        <div class="social-media">
-            <h5>Sign up with social media</h5>
-            <div class="social-icons">
-                <!-- <a href="#"><i class="icon-social-facebook" title="Facebook"></i></a>
-                <a href="#"><i class="icon-social-google" title="Google"></i></a>
-                <a href="#"><i class="icon-social-twitter" title="Twitter"></i></a> -->
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fa fa-facebook-square"></i>
-                    <fa-icon [icon]="faFacebookSquare" size="2x"></fa-icon>
-                  </button>
-  
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-google"></i>
-                    <fa-icon [icon]="faGoogle" size="2x"></fa-icon>
-                  </button>
-  
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-twitter"></i>
-                    <fa-icon [icon]="faTwitterSquare" size="2x"></fa-icon>
-                  </button>
-  
-                  <button type="button" class="btn btn-link btn-floating mx-1">
-                    <i class="fab fa-github"></i>
-                    <fa-icon [icon]="faGithubSquare" size="2x"></fa-icon>
-                  </button>
-                </div>
-            </div>
+<div class="container col-md-6 col-lg-4">
+  <form class="row g-3">
+    <div class="col-md-12">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control" id="inputEmail4">
+    </div>
+    <div class="col-md-12">
+      <label for="inputPassword4" class="form-label">Password</label>
+      <input type="password" class="form-control" id="inputPassword4">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress" class="form-label">Address</label>
+      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress2" class="form-label">Address 2</label>
+      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+    </div>
+    <div class="col-md-4">
+      <label for="inputCity" class="form-label">City</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="col-md-4">
+      <label for="inputState" class="form-label">State</label>
+      <select id="inputState" class="form-select">
+        <option selected>Choose...</option>
+        <option>Gujarat</option>
+        <option>Mumbai</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <label for="inputZip" class="form-label">Zip</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+    <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <label class="form-check-label" for="gridCheck">
+        Check me out
+      </label>
+    </div>
+  </div>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+</form>
+<br>
+<div class="social-media text-center">
+   <h5>Sign up with social media</h5>
+      <div class="social-icons">
+        <!-- <a href="#"><i class="icon-social-facebook" title="Facebook"></i></a>
+          <a href="#"><i class="icon-social-google" title="Google"></i></a>
+          <a href="#"><i class="icon-social-twitter" title="Twitter"></i></a> -->
+          <button type="button" class="btn btn-link btn-floating mx-1">
+            <i class="fa fa-facebook-square"></i>
+            <fa-icon [icon]="faFacebookSquare" size="2x" style="color: rgb(1, 101, 225);"></fa-icon>
+          </button>
+          
+          <button type="button" class="btn btn-link btn-floating mx-1">
+            <i class="fab fa-google"></i>
+            <fa-icon [icon]="faGoogle" size="2x" style="color: rgb(221, 75, 57);"></fa-icon>
+          </button>
+          
+          <button type="button" class="btn btn-link btn-floating mx-1">
+            <i class="fab fa-twitter"></i>
+            <fa-icon [icon]="faTwitterSquare" size="2x" style="color: rgb(8, 160, 233);"></fa-icon>
+          </button>
+
+          <button type="button" class="btn btn-link btn-floating mx-1">
+            <i class="fab fa-github"></i>
+            <fa-icon [icon]="faGithubSquare" size="2x" style="color: rgb(0, 0, 0);"></fa-icon>
+          </button>
+          
         </div>
-</body>
-</html>
+    </div>
+</div>
+              
+              
+              
